--- a/styles.css
+++ b/styles.css
@@ -34,12 +34,13 @@ img {
   background-color: #073C55;
   color: #fff;
   font-size: 0.88vw;
+  position: absolute;
+  bottom: 0;
+  width: 95%;
 }
 .footer-copyright{
   margin: auto;
   width: 30%;
   float: right;
   font-family: 'Open Sans', sans-serif;
-  position:absolute;
-  bottom:0;
 } 
