--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html, body {
 
 main {
   margin: auto;
-  width: 50%;
+  /*width: 50%;*/
   padding: 20px;
 }
 
@@ -19,3 +19,28 @@ main > h1 {
   text-align: center;
   font-size: 3.5em;
 }
+img {
+    border: 0px;
+    padding: 5px;
+    max-width: 100%; height: auto;
+}
+
+#content-core {
+    text-align: center;
+}
+.footer {
+  margin: auto;
+  padding: 20px;
+  background-color: #073C55;
+  color: #fff;
+  font-size: 0.88vw;
+  position: absolute;
+  bottom: 0;
+  width: 95%;
+}
+.footer-copyright{
+  margin: auto;
+  width: 30%;
+  float: right;
+  font-family: 'Open Sans', sans-serif;
+} 
