--- a/styles.css
+++ b/styles.css
@@ -17,30 +17,67 @@ main {
 
 main > h1 {
   text-align: center;
-  font-size: 3.5em;
+  font-size: 4vw;
 }
 img {
     border: 0px;
-    padding: 5px;
-    max-width: 100%; height: auto;
+    max-width: 100%;
+    height: auto;
 }
 
 #content-core {
     text-align: center;
+    max-width: 70%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
-.footer {
+/*.footer {
   margin: auto;
   padding: 20px;
   background-color: #073C55;
   color: #fff;
-  font-size: 0.82vw;
-  position: absolute;
+  font-size: 1vw;
   bottom: 0;
-  width: 95%;
-}
+  left: 0;
+  height: 40px;
+  position: fixed;
+  width: 100%;
+}*/
 .footer-copyright{
   margin: auto;
-  width: 30%;
+  width: 50%;
   float: right;
   font-family: 'Open Sans', sans-serif;
 } 
+@media only screen and (max-width : 769px)
+{ 
+  footer {
+    margin: auto;
+    padding: 5px;
+    background-color: #073C55;
+    color: #fff;
+    font-size: 1.8vw;
+    bottom: 0;
+    left: 0;
+    height: 50px;
+    position: fixed;
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width : 769px)
+{ 
+  footer {
+    margin: auto;
+    padding: 10px;
+    background-color: #073C55;
+    color: #fff;
+    font-size: 1em;
+    bottom: 0;
+    left: 0;
+    height: 60px;
+    position: fixed;
+    width: 100%;
+  }
+}
