--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,12 @@ html, body {
   padding: 0;
   background-color: #fff;
 }
-
+#bannerazul {
+  min-height: 30px;
+  min-width: max-content;
+  background-color: #165c7d;
+  margin: auto;
+}
 main {
   margin: auto;
   /*width: 50%;*/
@@ -32,6 +37,60 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+h2{
+  margin-left: 1.33em;
+  font-size: 1.8vw;
+  text-align: left;
+}
+.tituloazul{
+  color: #165c7d;
+  font-weight: bold;
+}
+.titulolaranja{
+  color:#FFA300;
+  font-weight: bold;
+}
+#credifoz{
+  background: url(images/Credifoz.webp) no-repeat center;
+}
+#unilos{
+  background: url(images/Unilos.webp) no-repeat center;
+}
+#viacredi{
+  background: url(images/Viacredi.webp) no-repeat center;
+}
+.textoapoio{
+  font-style: italic; 
+  max-width: 60%;
+  left: 0%;
+  text-align: left;
+  padding: 5px;
+}
+span {
+  font-style: normal;
+}
+.negrito{
+  font-weight: bold   ;
+}
+.container{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: flex-start;
+}
+.item{
+  border: solid 1px  #000;
+  min-height: 100px;
+  border-radius: 10px;
+  min-width: 230px;
+  max-width: 250px;
+  margin-right: 20px;
+}
+.fotoentrada{
+  background: url(images/entrada.png) no-repeat ;
+  min-height: 260px;
+  min-width: 370px;
+}
 /*.footer {
   margin: auto;
   padding: 20px;
@@ -50,7 +109,7 @@ img {
   float: right;
   font-family: 'Open Sans', sans-serif;
 } 
-@media only screen and (max-width : 769px)
+@media only screen and (max-width : 769px) /*celular*/
 { 
   footer {
     margin: auto;
@@ -61,8 +120,47 @@ img {
     bottom: 0;
     left: 0;
     height: 50px;
-    position: fixed;
+    position: relative;
     width: 100%;
+  }
+  h2{
+    margin-left:0;
+    font-size: 1.1em;
+  }
+  .container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #elementograficoDireita{
+    max-width: 6em;
+    float: right;
+    margin-left: -336px;
+    position: absolute;
+    right: 0;
+  }
+  .fotoentrada{
+    padding: 10px 0;
+  }
+  .item{
+    border: solid 1px  #000;
+    min-height: 80px;
+    border-radius: 10px;
+    min-width: 190px;
+    max-width: 190px;
+    margin: 5px 20px;
+  }
+  .textoapoio{
+    font-style: italic; 
+    max-width: 100%;
+    left: 0%;
+    text-align: left;
+    padding: 5px;
+  }
+  #content-core {
+    text-align: center;
+    max-width: 100%
   }
 }
 
@@ -71,13 +169,24 @@ img {
   footer {
     margin: auto;
     padding: 10px;
+    margin-top: 10px;
     background-color: #073C55;
     color: #fff;
     font-size: 1em;
     bottom: 0;
     left: 0;
     height: 60px;
-    position: fixed;
+    position: relative;
     width: 100%;
+  }
+  #elementograficoDireita{
+    max-width: 336px;
+    float: right;
+    margin-left: -336px;
+    position: absolute;
+    right: 0;
+  }
+  .fotoentrada{
+    padding: 10px;
   }
 }
