--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,13 @@ h2{
   text-align: left;
   padding: 5px;
 }
+a.fill-div {
+  text-align: center;
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+}
 span {
   font-style: normal;
 }
