--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ span {
 }
 .container{
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   justify-content: center;
   align-items: flex-start;
 }
@@ -160,6 +160,13 @@ a.fill-div {
     min-width: 190px;
     max-width: 190px;
     margin: 5px 20px;
+  }
+  a.fill-div {
+    text-align: center;
+    display: block;
+    min-height: 80px;
+    width: 100%;
+    text-decoration: none;
   }
   .textoapoio{
     font-style: italic; 
