--- a/bs/css/custom.css
+++ b/bs/css/custom.css
@@ -70,6 +70,14 @@
         box-shadow: 0 0 0 0;
     }
     
+    footer a {
+        color: white;
+    }
+    
+    footer a:hover {
+        color: var(--secondary);
+    }
+    
     .fs-7 {
         font-size: .9em;
     }
