--- a/css/custom.css
+++ b/css/custom.css
@@ -81,3 +81,9 @@
     .fs-7 {
         font-size: .9em;
     }
+    
+    @media (min-width: 768px) {
+        #blocos .col-md-6 {
+            width: auto;
+        }
+    }
